[tool.poetry]
name = "turku-geot-map"
version = "0.1.0"
description = ""
authors = ["nialov <nikolasovaskainen@hotmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
kapalo-py = {git = "https://github.com/nialov/kapalo-py.git"}
invoke = "^1.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
